<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.davidkuna.remotecontrolserver.activity.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleSocketServer"
        android:layout_alignBottom="@+id/toggleSocketServer"
        android:text="@string/socker_server" />

    <ToggleButton
        android:id="@+id/toggleSocketServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dp"
        android:text="ToggleButton" />

    <ToggleButton
        android:id="@+id/toggleInternalSensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/toggleSocketServer"
        android:layout_below="@+id/toggleSocketServer"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleInternalSensors"
        android:layout_alignBottom="@+id/toggleInternalSensors"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/internal_sensors" />


    <TextView
        android:id="@+id/tvConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/disconnected"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/tvConnectionStatus"
        android:text="@string/server_status" />

    <TextView
        android:id="@+id/tvIncomingMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:text="@string/incoming_messages" />

    <TextView
        android:id="@+id/tvServerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/tvIncomingMessages"
        android:text="@string/stoped"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/tvServerStatus"
        android:text="@string/connection_status" />

    <ToggleButton
        android:id="@+id/toggleGPSTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleInternalSensors"
        android:layout_below="@+id/toggleInternalSensors"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleGPSTracker"
        android:layout_alignBottom="@+id/toggleGPSTracker"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/gps_tracker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0.0.0"
        android:id="@+id/tvLocalIP"
        android:layout_below="@+id/tvConnectionStatus"
        android:layout_toRightOf="@+id/TextView01"
        android:layout_toEndOf="@+id/TextView01" />

</RelativeLayout>